--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "2.5.1"
   },
   "dependencies": {
+    "dotenv": "^11.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "mongoose": "^6.1.6"
